[package]
name = "octopus-nft-contract"
version = "0.1.0"
edition = "2021"
description = "NFT contract for Octopus framework with IPCM integration"
repository = "https://github.com/your-username/octopus"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "20.0.0"
soroban-token-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true